RESOLVED FIXED241885
Ignore history items added by JS without user interaction when navigation back/forward via the WKWebView API
https://bugs.webkit.org/show_bug.cgi?id=241885
Summary Ignore history items added by JS without user interaction when navigation bac...
Chris Dumez
Reported 2022-06-22 16:26:02 PDT
Ignore history items added by JS without user interaction when navigation back/forward via the WKWebView API. This is a behavior similar to the intervention made in Chrome (https://bugs.chromium.org/p/chromium/issues/detail?id=907167) to prevent websites from hijacking the back/forward list.
Attachments
Chris Dumez
Comment 1 2022-06-22 16:26:17 PDT
Chris Dumez
Comment 2 2022-06-22 16:43:35 PDT
EWS
Comment 3 2022-06-23 09:17:09 PDT
Committed r295778 (251783@main): <https://commits.webkit.org/251783@main> Reviewed commits have been landed. Closing PR #1705 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.