Source/WebKit/Shared/SessionState.cpp
@@ -186,6 +186,7 @@ void PageState::encode(IPC::Encoder& encoder) const
         encoder << sessionStateObject->wireBytes();
 
     encoder << shouldOpenExternalURLsPolicy;
+    encoder << wasCreatedByJSWithoutUserInteraction;
 }
 
 bool PageState::decode(IPC::Decoder& decoder, PageState& result)
@@ -216,6 +217,10 @@ bool PageState::decode(IPC::Decoder& decoder, PageState& result)
         return false;
 
     result.shouldOpenExternalURLsPolicy = *shouldOpenExternalURLsPolicy;
+
+    if (!decoder.decode(result.wasCreatedByJSWithoutUserInteraction))
+        return false;
+
     return true;
 }
 
